// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`additional converter actions 1`] = `
Shortcut {
  "actions": Array [
    Action {
      "end": Array [
        1,
        17,
      ],
      "id": "is.workflow.actions.gettext",
      "magicvarname": undefined,
      "name": "Text",
      "parameters": Parameters {
        "builtValues": Object {},
        "values": Object {
          "WFTextActionText": Text {
            "_components": Array [
              "hi",
            ],
          },
        },
      },
      "start": Array [
        1,
        8,
      ],
    },
  ],
  "name": "My Great Shortcut",
  "showInWidget": true,
}
`;

exports[`invert shortcut plist 1`] = `"Text hmm"`;

exports[`make output data 1`] = `
Object {
  "outputdata": Shortcut {
    "actions": Array [],
    "name": "My Great Shortcut",
    "showInWidget": true,
  },
}
`;

exports[`make shortcut plist 1`] = `
Object {
  "shortcutplist": Object {
    "data": Array [
      98,
      112,
      108,
      105,
      115,
      116,
      48,
      48,
      215,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
      9,
      10,
      11,
      18,
      21,
      39,
      95,
      16,
      23,
      87,
      70,
      87,
      111,
      114,
      107,
      102,
      108,
      111,
      119,
      67,
      108,
      105,
      101,
      110,
      116,
      86,
      101,
      114,
      115,
      105,
      111,
      110,
      95,
      16,
      23,
      87,
      70,
      87,
      111,
      114,
      107,
      102,
      108,
      111,
      119,
      67,
      108,
      105,
      101,
      110,
      116,
      82,
      101,
      108,
      101,
      97,
      115,
      101,
      95,
      16,
      30,
      87,
      70,
      87,
      111,
      114,
      107,
      102,
      108,
      111,
      119,
      77,
      105,
      110,
      105,
      109,
      117,
      109,
      67,
      108,
      105,
      101,
      110,
      116,
      86,
      101,
      114,
      115,
      105,
      111,
      110,
      94,
      87,
      70,
      87,
      111,
      114,
      107,
      102,
      108,
      111,
      119,
      73,
      99,
      111,
      110,
      95,
      16,
      15,
      87,
      70,
      87,
      111,
      114,
      107,
      102,
      108,
      111,
      119,
      84,
      121,
      112,
      101,
      115,
      95,
      16,
      33,
      87,
      70,
      87,
      111,
      114,
      107,
      102,
      108,
      111,
      119,
      73,
      110,
      112,
      117,
      116,
      67,
      111,
      110,
      116,
      101,
      110,
      116,
      73,
      116,
      101,
      109,
      67,
      108,
      97,
      115,
      115,
      101,
      115,
      95,
      16,
      17,
      87,
      70,
      87,
      111,
      114,
      107,
      102,
      108,
      111,
      119,
      65,
      99,
      116,
      105,
      111,
      110,
      115,
      83,
      55,
      53,
      52,
      85,
      50,
      46,
      49,
      46,
      50,
      17,
      1,
      155,
      211,
      12,
      13,
      14,
      15,
      16,
      17,
      95,
      16,
      25,
      87,
      70,
      87,
      111,
      114,
      107,
      102,
      108,
      111,
      119,
      73,
      99,
      111,
      110,
      71,
      108,
      121,
      112,
      104,
      78,
      117,
      109,
      98,
      101,
      114,
      95,
      16,
      23,
      87,
      70,
      87,
      111,
      114,
      107,
      102,
      108,
      111,
      119,
      73,
      99,
      111,
      110,
      73,
      109,
      97,
      103,
      101,
      68,
      97,
      116,
      97,
      95,
      16,
      24,
      87,
      70,
      87,
      111,
      114,
      107,
      102,
      108,
      111,
      119,
      73,
      99,
      111,
      110,
      83,
      116,
      97,
      114,
      116,
      67,
      111,
      108,
      111,
      114,
      17,
      232,
      119,
      64,
      18,
      123,
      114,
      233,
      255,
      162,
      19,
      20,
      88,
      78,
      67,
      87,
      105,
      100,
      103,
      101,
      116,
      88,
      87,
      97,
      116,
      99,
      104,
      75,
      105,
      116,
      175,
      16,
      17,
      22,
      23,
      24,
      25,
      26,
      27,
      28,
      29,
      30,
      31,
      32,
      33,
      34,
      35,
      36,
      37,
      38,
      95,
      16,
      24,
      87,
      70,
      65,
      112,
      112,
      83,
      116,
      111,
      114,
      101,
      65,
      112,
      112,
      67,
      111,
      110,
      116,
      101,
      110,
      116,
      73,
      116,
      101,
      109,
      95,
      16,
      20,
      87,
      70,
      65,
      114,
      116,
      105,
      99,
      108,
      101,
      67,
      111,
      110,
      116,
      101,
      110,
      116,
      73,
      116,
      101,
      109,
      95,
      16,
      20,
      87,
      70,
      67,
      111,
      110,
      116,
      97,
      99,
      116,
      67,
      111,
      110,
      116,
      101,
      110,
      116,
      73,
      116,
      101,
      109,
      95,
      16,
      17,
      87,
      70,
      68,
      97,
      116,
      101,
      67,
      111,
      110,
      116,
      101,
      110,
      116,
      73,
      116,
      101,
      109,
      95,
      16,
      25,
      87,
      70,
      69,
      109,
      97,
      105,
      108,
      65,
      100,
      100,
      114,
      101,
      115,
      115,
      67,
      111,
      110,
      116,
      101,
      110,
      116,
      73,
      116,
      101,
      109,
      95,
      16,
      24,
      87,
      70,
      71,
      101,
      110,
      101,
      114,
      105,
      99,
      70,
      105,
      108,
      101,
      67,
      111,
      110,
      116,
      101,
      110,
      116,
      73,
      116,
      101,
      109,
      95,
      16,
      18,
      87,
      70,
      73,
      109,
      97,
      103,
      101,
      67,
      111,
      110,
      116,
      101,
      110,
      116,
      73,
      116,
      101,
      109,
      95,
      16,
      26,
      87,
      70,
      105,
      84,
      117,
      110,
      101,
      115,
      80,
      114,
      111,
      100,
      117,
      99,
      116,
      67,
      111,
      110,
      116,
      101,
      110,
      116,
      73,
      116,
      101,
      109,
      95,
      16,
      21,
      87,
      70,
      76,
      111,
      99,
      97,
      116,
      105,
      111,
      110,
      67,
      111,
      110,
      116,
      101,
      110,
      116,
      73,
      116,
      101,
      109,
      95,
      16,
      23,
      87,
      70,
      68,
      67,
      77,
      97,
      112,
      115,
      76,
      105,
      110,
      107,
      67,
      111,
      110,
      116,
      101,
      110,
      116,
      73,
      116,
      101,
      109,
      95,
      16,
      20,
      87,
      70,
      65,
      86,
      65,
      115,
      115,
      101,
      116,
      67,
      111,
      110,
      116,
      101,
      110,
      116,
      73,
      116,
      101,
      109,
      95,
      16,
      16,
      87,
      70,
      80,
      68,
      70,
      67,
      111,
      110,
      116,
      101,
      110,
      116,
      73,
      116,
      101,
      109,
      95,
      16,
      24,
      87,
      70,
      80,
      104,
      111,
      110,
      101,
      78,
      117,
      109,
      98,
      101,
      114,
      67,
      111,
      110,
      116,
      101,
      110,
      116,
      73,
      116,
      101,
      109,
      95,
      16,
      21,
      87,
      70,
      82,
      105,
      99,
      104,
      84,
      101,
      120,
      116,
      67,
      111,
      110,
      116,
      101,
      110,
      116,
      73,
      116,
      101,
      109,
      95,
      16,
      26,
      87,
      70,
      83,
      97,
      102,
      97,
      114,
      105,
      87,
      101,
      98,
      80,
      97,
      103,
      101,
      67,
      111,
      110,
      116,
      101,
      110,
      116,
      73,
      116,
      101,
      109,
      95,
      16,
      19,
      87,
      70,
      83,
      116,
      114,
      105,
      110,
      103,
      67,
      111,
      110,
      116,
      101,
      110,
      116,
      73,
      116,
      101,
      109,
      95,
      16,
      16,
      87,
      70,
      85,
      82,
      76,
      67,
      111,
      110,
      116,
      101,
      110,
      116,
      73,
      116,
      101,
      109,
      160,
      0,
      8,
      0,
      23,
      0,
      49,
      0,
      75,
      0,
      108,
      0,
      123,
      0,
      141,
      0,
      177,
      0,
      197,
      0,
      201,
      0,
      207,
      0,
      210,
      0,
      217,
      0,
      245,
      1,
      15,
      1,
      42,
      1,
      45,
      1,
      46,
      1,
      51,
      1,
      54,
      1,
      63,
      1,
      72,
      1,
      92,
      1,
      119,
      1,
      142,
      1,
      165,
      1,
      185,
      1,
      213,
      1,
      240,
      2,
      5,
      2,
      34,
      2,
      58,
      2,
      84,
      2,
      107,
      2,
      126,
      2,
      153,
      2,
      177,
      2,
      206,
      2,
      228,
      2,
      247,
      0,
      0,
      0,
      0,
      0,
      0,
      2,
      1,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      40,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      2,
      248,
    ],
    "type": "Buffer",
  },
}
`;

exports[`make shortcut plist 2`] = `
Object {
  "data": Array [
    98,
    112,
    108,
    105,
    115,
    116,
    48,
    48,
    215,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    18,
    21,
    39,
    95,
    16,
    23,
    87,
    70,
    87,
    111,
    114,
    107,
    102,
    108,
    111,
    119,
    67,
    108,
    105,
    101,
    110,
    116,
    86,
    101,
    114,
    115,
    105,
    111,
    110,
    95,
    16,
    23,
    87,
    70,
    87,
    111,
    114,
    107,
    102,
    108,
    111,
    119,
    67,
    108,
    105,
    101,
    110,
    116,
    82,
    101,
    108,
    101,
    97,
    115,
    101,
    95,
    16,
    30,
    87,
    70,
    87,
    111,
    114,
    107,
    102,
    108,
    111,
    119,
    77,
    105,
    110,
    105,
    109,
    117,
    109,
    67,
    108,
    105,
    101,
    110,
    116,
    86,
    101,
    114,
    115,
    105,
    111,
    110,
    94,
    87,
    70,
    87,
    111,
    114,
    107,
    102,
    108,
    111,
    119,
    73,
    99,
    111,
    110,
    95,
    16,
    15,
    87,
    70,
    87,
    111,
    114,
    107,
    102,
    108,
    111,
    119,
    84,
    121,
    112,
    101,
    115,
    95,
    16,
    33,
    87,
    70,
    87,
    111,
    114,
    107,
    102,
    108,
    111,
    119,
    73,
    110,
    112,
    117,
    116,
    67,
    111,
    110,
    116,
    101,
    110,
    116,
    73,
    116,
    101,
    109,
    67,
    108,
    97,
    115,
    115,
    101,
    115,
    95,
    16,
    17,
    87,
    70,
    87,
    111,
    114,
    107,
    102,
    108,
    111,
    119,
    65,
    99,
    116,
    105,
    111,
    110,
    115,
    83,
    55,
    53,
    52,
    85,
    50,
    46,
    49,
    46,
    50,
    17,
    1,
    155,
    211,
    12,
    13,
    14,
    15,
    16,
    17,
    95,
    16,
    25,
    87,
    70,
    87,
    111,
    114,
    107,
    102,
    108,
    111,
    119,
    73,
    99,
    111,
    110,
    71,
    108,
    121,
    112,
    104,
    78,
    117,
    109,
    98,
    101,
    114,
    95,
    16,
    23,
    87,
    70,
    87,
    111,
    114,
    107,
    102,
    108,
    111,
    119,
    73,
    99,
    111,
    110,
    73,
    109,
    97,
    103,
    101,
    68,
    97,
    116,
    97,
    95,
    16,
    24,
    87,
    70,
    87,
    111,
    114,
    107,
    102,
    108,
    111,
    119,
    73,
    99,
    111,
    110,
    83,
    116,
    97,
    114,
    116,
    67,
    111,
    108,
    111,
    114,
    17,
    232,
    119,
    64,
    18,
    123,
    114,
    233,
    255,
    162,
    19,
    20,
    88,
    78,
    67,
    87,
    105,
    100,
    103,
    101,
    116,
    88,
    87,
    97,
    116,
    99,
    104,
    75,
    105,
    116,
    175,
    16,
    17,
    22,
    23,
    24,
    25,
    26,
    27,
    28,
    29,
    30,
    31,
    32,
    33,
    34,
    35,
    36,
    37,
    38,
    95,
    16,
    24,
    87,
    70,
    65,
    112,
    112,
    83,
    116,
    111,
    114,
    101,
    65,
    112,
    112,
    67,
    111,
    110,
    116,
    101,
    110,
    116,
    73,
    116,
    101,
    109,
    95,
    16,
    20,
    87,
    70,
    65,
    114,
    116,
    105,
    99,
    108,
    101,
    67,
    111,
    110,
    116,
    101,
    110,
    116,
    73,
    116,
    101,
    109,
    95,
    16,
    20,
    87,
    70,
    67,
    111,
    110,
    116,
    97,
    99,
    116,
    67,
    111,
    110,
    116,
    101,
    110,
    116,
    73,
    116,
    101,
    109,
    95,
    16,
    17,
    87,
    70,
    68,
    97,
    116,
    101,
    67,
    111,
    110,
    116,
    101,
    110,
    116,
    73,
    116,
    101,
    109,
    95,
    16,
    25,
    87,
    70,
    69,
    109,
    97,
    105,
    108,
    65,
    100,
    100,
    114,
    101,
    115,
    115,
    67,
    111,
    110,
    116,
    101,
    110,
    116,
    73,
    116,
    101,
    109,
    95,
    16,
    24,
    87,
    70,
    71,
    101,
    110,
    101,
    114,
    105,
    99,
    70,
    105,
    108,
    101,
    67,
    111,
    110,
    116,
    101,
    110,
    116,
    73,
    116,
    101,
    109,
    95,
    16,
    18,
    87,
    70,
    73,
    109,
    97,
    103,
    101,
    67,
    111,
    110,
    116,
    101,
    110,
    116,
    73,
    116,
    101,
    109,
    95,
    16,
    26,
    87,
    70,
    105,
    84,
    117,
    110,
    101,
    115,
    80,
    114,
    111,
    100,
    117,
    99,
    116,
    67,
    111,
    110,
    116,
    101,
    110,
    116,
    73,
    116,
    101,
    109,
    95,
    16,
    21,
    87,
    70,
    76,
    111,
    99,
    97,
    116,
    105,
    111,
    110,
    67,
    111,
    110,
    116,
    101,
    110,
    116,
    73,
    116,
    101,
    109,
    95,
    16,
    23,
    87,
    70,
    68,
    67,
    77,
    97,
    112,
    115,
    76,
    105,
    110,
    107,
    67,
    111,
    110,
    116,
    101,
    110,
    116,
    73,
    116,
    101,
    109,
    95,
    16,
    20,
    87,
    70,
    65,
    86,
    65,
    115,
    115,
    101,
    116,
    67,
    111,
    110,
    116,
    101,
    110,
    116,
    73,
    116,
    101,
    109,
    95,
    16,
    16,
    87,
    70,
    80,
    68,
    70,
    67,
    111,
    110,
    116,
    101,
    110,
    116,
    73,
    116,
    101,
    109,
    95,
    16,
    24,
    87,
    70,
    80,
    104,
    111,
    110,
    101,
    78,
    117,
    109,
    98,
    101,
    114,
    67,
    111,
    110,
    116,
    101,
    110,
    116,
    73,
    116,
    101,
    109,
    95,
    16,
    21,
    87,
    70,
    82,
    105,
    99,
    104,
    84,
    101,
    120,
    116,
    67,
    111,
    110,
    116,
    101,
    110,
    116,
    73,
    116,
    101,
    109,
    95,
    16,
    26,
    87,
    70,
    83,
    97,
    102,
    97,
    114,
    105,
    87,
    101,
    98,
    80,
    97,
    103,
    101,
    67,
    111,
    110,
    116,
    101,
    110,
    116,
    73,
    116,
    101,
    109,
    95,
    16,
    19,
    87,
    70,
    83,
    116,
    114,
    105,
    110,
    103,
    67,
    111,
    110,
    116,
    101,
    110,
    116,
    73,
    116,
    101,
    109,
    95,
    16,
    16,
    87,
    70,
    85,
    82,
    76,
    67,
    111,
    110,
    116,
    101,
    110,
    116,
    73,
    116,
    101,
    109,
    160,
    0,
    8,
    0,
    23,
    0,
    49,
    0,
    75,
    0,
    108,
    0,
    123,
    0,
    141,
    0,
    177,
    0,
    197,
    0,
    201,
    0,
    207,
    0,
    210,
    0,
    217,
    0,
    245,
    1,
    15,
    1,
    42,
    1,
    45,
    1,
    46,
    1,
    51,
    1,
    54,
    1,
    63,
    1,
    72,
    1,
    92,
    1,
    119,
    1,
    142,
    1,
    165,
    1,
    185,
    1,
    213,
    1,
    240,
    2,
    5,
    2,
    34,
    2,
    58,
    2,
    84,
    2,
    107,
    2,
    126,
    2,
    153,
    2,
    177,
    2,
    206,
    2,
    228,
    2,
    247,
    0,
    0,
    0,
    0,
    0,
    0,
    2,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    40,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    2,
    248,
  ],
  "type": "Buffer",
}
`;
